Fix for bug 207413: Midas: designMode = "on" fails for a newly created iframe patch by jst r=ere sr=kin